assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS error ';'

    7 feature_list: %empty
    8             | feature_list feature
    9             | error ';'

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID ':' TYPEID ';'
   12        | OBJECTID ':' TYPEID ASSIGN expr ';'
   13        | OBJECTID '(' error ')' ':' TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' formal_list ')' ':' TYPEID '{' error '}' ';'
   15        | OBJECTID '(' error ')' ':' TYPEID '{' error '}' ';'

   16 formal_list: %empty
   17            | formal
   18            | formal_list ',' formal

   19 formal: OBJECTID ':' TYPEID

   20 expr: OBJECTID ASSIGN expr
   21     | expr '.' OBJECTID '(' comma_sep_expr ')'
   22     | expr '@' TYPEID '.' OBJECTID '(' comma_sep_expr ')'
   23     | OBJECTID '(' comma_sep_expr ')'
   24     | IF expr THEN expr ELSE expr FI
   25     | WHILE expr LOOP expr POOL
   26     | '{' at_least_one_expr '}'
   27     | LET let_expr
   28     | CASE expr OF cases_list ESAC
   29     | NEW TYPEID
   30     | ISVOID expr
   31     | expr '+' expr
   32     | expr '-' expr
   33     | expr '*' expr
   34     | expr '/' expr
   35     | '~' expr
   36     | expr '<' expr
   37     | expr LE expr
   38     | expr '=' expr
   39     | NOT expr
   40     | '(' expr ')'
   41     | OBJECTID
   42     | INT_CONST
   43     | STR_CONST
   44     | BOOL_CONST

   45 at_least_one_expr: expr ';'
   46                  | at_least_one_expr expr ';'
   47                  | error ';'

   48 comma_sep_expr: %empty
   49               | expr
   50               | comma_sep_expr ',' expr

   51 let_expr: OBJECTID ':' TYPEID IN expr
   52         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   53         | OBJECTID ':' TYPEID ',' let_expr
   54         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   55         | error ','

   56 case_: OBJECTID ':' TYPEID DARROW expr ';'

   57 cases_list: case_
   58           | cases_list case_


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 13 14 15 21 22 23 40
')' (41) 10 13 14 15 21 22 23 40
'*' (42) 33
'+' (43) 31
',' (44) 18 50 53 54 55
'-' (45) 32
'.' (46) 21 22
'/' (47) 34
':' (58) 10 11 12 13 14 15 19 51 52 53 54 56
';' (59) 4 5 6 9 10 11 12 13 14 15 45 46 47 56
'<' (60) 36
'=' (61) 38
'@' (64) 22
'{' (123) 4 5 10 13 14 15 26
'}' (125) 4 5 10 13 14 15 26
'~' (126) 35
error (256) 6 9 13 14 15 47 55
CLASS (258) 4 5 6
ELSE (259) 24
FI (260) 24
IF (261) 24
IN (262) 51 52
INHERITS (263) 5
LET (264) 27
LOOP (265) 25
POOL (266) 25
THEN (267) 24
WHILE (268) 25
CASE (269) 28
ESAC (270) 28
OF (271) 28
DARROW (272) 56
NEW (273) 29
ISVOID (274) 30
STR_CONST (275) 43
INT_CONST (276) 42
BOOL_CONST (277) 44
TYPEID (278) 4 5 10 11 12 13 14 15 19 22 29 51 52 53 54 56
OBJECTID (279) 10 11 12 13 14 15 19 20 21 22 23 41 51 52 53 54 56
ASSIGN (280) 12 20 52 54
NOT (281) 39
LE (282) 37
ERROR (283)
LET_STMT (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3, on right: 1 3
class (49)
    on left: 4 5 6, on right: 2 3
feature_list (50)
    on left: 7 8 9, on right: 4 5 8
feature (51)
    on left: 10 11 12 13 14 15, on right: 8
formal_list (52)
    on left: 16 17 18, on right: 10 14 18
formal (53)
    on left: 19, on right: 17 18
expr (54)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39 40 41 42 43 44, on right: 10 12 13 20 21 22 24 25 28 30 31
    32 33 34 35 36 37 38 39 40 45 46 49 50 51 52 54 56
at_least_one_expr (55)
    on left: 45 46 47, on right: 26 46
comma_sep_expr (56)
    on left: 48 49 50, on right: 21 22 23 50
let_expr (57)
    on left: 51 52 53 54 55, on right: 27 53 54
case_ (58)
    on left: 56, on right: 57 58
cases_list (59)
    on left: 57 58, on right: 28 58


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS . error ';'

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    6 class: CLASS error . ';'

    ';'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS error ';' .

    $default  reduce using rule 6 (class)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error  shift, and go to state 13

    OBJECTID  reduce using rule 7 (feature_list)
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 14


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 15


State 13

    9 feature_list: error . ';'

    ';'  shift, and go to state 16


State 14

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 18

    feature  go to state 19


State 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error  shift, and go to state 13

    OBJECTID  reduce using rule 7 (feature_list)
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 20


State 16

    9 feature_list: error ';' .

    $default  reduce using rule 9 (feature_list)


State 17

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID . ':' TYPEID ';'
   12        | OBJECTID . ':' TYPEID ASSIGN expr ';'
   13        | OBJECTID . '(' error ')' ':' TYPEID '{' expr '}' ';'
   14        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' error '}' ';'
   15        | OBJECTID . '(' error ')' ':' TYPEID '{' error '}' ';'

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 18

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 23


State 19

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


State 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 24

    feature  go to state 19


State 21

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'
   13        | OBJECTID '(' . error ')' ':' TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' . formal_list ')' ':' TYPEID '{' error '}' ';'
   15        | OBJECTID '(' . error ')' ':' TYPEID '{' error '}' ';'

    error     shift, and go to state 25
    OBJECTID  shift, and go to state 26

    ')'  reduce using rule 16 (formal_list)
    ','  reduce using rule 16 (formal_list)

    formal_list  go to state 27
    formal       go to state 28


State 22

   11 feature: OBJECTID ':' . TYPEID ';'
   12        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 29


State 23

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 30


State 25

   13 feature: OBJECTID '(' error . ')' ':' TYPEID '{' expr '}' ';'
   15        | OBJECTID '(' error . ')' ':' TYPEID '{' error '}' ';'

    ')'  shift, and go to state 31


State 26

   19 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 27

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' formal_list . ')' ':' TYPEID '{' error '}' ';'
   18 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 28

   17 formal_list: formal .

    $default  reduce using rule 17 (formal_list)


State 29

   11 feature: OBJECTID ':' TYPEID . ';'
   12        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 35
    ';'     shift, and go to state 36


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 31

   13 feature: OBJECTID '(' error ')' . ':' TYPEID '{' expr '}' ';'
   15        | OBJECTID '(' error ')' . ':' TYPEID '{' error '}' ';'

    ':'  shift, and go to state 37


State 32

   19 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


State 33

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' formal_list ')' . ':' TYPEID '{' error '}' ';'

    ':'  shift, and go to state 39


State 34

   18 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 26

    formal  go to state 40


State 35

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 55


State 36

   11 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 11 (feature)


State 37

   13 feature: OBJECTID '(' error ')' ':' . TYPEID '{' expr '}' ';'
   15        | OBJECTID '(' error ')' ':' . TYPEID '{' error '}' ';'

    TYPEID  shift, and go to state 56


State 38

   19 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 19 (formal)


State 39

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' formal_list ')' ':' . TYPEID '{' error '}' ';'

    TYPEID  shift, and go to state 57


State 40

   18 formal_list: formal_list ',' formal .

    $default  reduce using rule 18 (formal_list)


State 41

   24 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 58


State 42

   27 expr: LET . let_expr

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60

    let_expr  go to state 61


State 43

   25 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 62


State 44

   28 expr: CASE . expr OF cases_list ESAC

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 63


State 45

   29 expr: NEW . TYPEID

    TYPEID  shift, and go to state 64


State 46

   30 expr: ISVOID . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 65


State 47

   43 expr: STR_CONST .

    $default  reduce using rule 43 (expr)


State 48

   42 expr: INT_CONST .

    $default  reduce using rule 42 (expr)


State 49

   44 expr: BOOL_CONST .

    $default  reduce using rule 44 (expr)


State 50

   20 expr: OBJECTID . ASSIGN expr
   23     | OBJECTID . '(' comma_sep_expr ')'
   41     | OBJECTID .

    ASSIGN  shift, and go to state 66
    '('     shift, and go to state 67

    $default  reduce using rule 41 (expr)


State 51

   39 expr: NOT . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 68


State 52

   35 expr: '~' . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 69


State 53

   26 expr: '{' . at_least_one_expr '}'

    error       shift, and go to state 70
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr               go to state 71
    at_least_one_expr  go to state 72


State 54

   40 expr: '(' . expr ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 73


State 55

   12 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   21 expr: expr . '.' OBJECTID '(' comma_sep_expr ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' comma_sep_expr ')'
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . LE expr
   38     | expr . '=' expr

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ';'  shift, and go to state 83


State 56

   13 feature: OBJECTID '(' error ')' ':' TYPEID . '{' expr '}' ';'
   15        | OBJECTID '(' error ')' ':' TYPEID . '{' error '}' ';'

    '{'  shift, and go to state 84


State 57

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}' ';'
   14        | OBJECTID '(' formal_list ')' ':' TYPEID . '{' error '}' ';'

    '{'  shift, and go to state 85


State 58

   21 expr: expr . '.' OBJECTID '(' comma_sep_expr ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' comma_sep_expr ')'
   24     | IF expr . THEN expr ELSE expr FI
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . LE expr
   38     | expr . '=' expr

    THEN  shift, and go to state 86
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 59

   55 let_expr: error . ','

    ','  shift, and go to state 87


State 60

   51 let_expr: OBJECTID . ':' TYPEID IN expr
   52         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   53         | OBJECTID . ':' TYPEID ',' let_expr
   54         | OBJECTID . ':' TYPEID ASSIGN expr ',' let_expr

    ':'  shift, and go to state 88


State 61

   27 expr: LET let_expr .

    $default  reduce using rule 27 (expr)


State 62

   21 expr: expr . '.' OBJECTID '(' comma_sep_expr ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' comma_sep_expr ')'
   25     | WHILE expr . LOOP expr POOL
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . LE expr
   38     | expr . '=' expr

    LOOP  shift, and go to state 89
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 63

   21 expr: expr . '.' OBJECTID '(' comma_sep_expr ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' comma_sep_expr ')'
   28     | CASE expr . OF cases_list ESAC
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . LE expr
   38     | expr . '=' expr

    OF   shift, and go to state 90
    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82


State 64

   29 expr: NEW TYPEID .

    $default  reduce using rule 29 (expr)


State 65

   21 expr: expr . '.' OBJECTID '(' comma_sep_expr ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' comma_sep_expr ')'
   30     | ISVOID expr .
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . LE expr
   38     | expr . '=' expr

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 30 (expr)


State 66

   20 expr: OBJECTID ASSIGN . expr
